# qqbot

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
qqbot/plugins/chatgpt/: __init__.py  config.py
qqbot/plugins/edgegpt/: __init__.py  config.py
qqbot/plugins/group_manager/: __init__.py
qqbot/plugins/moderator/: __init__.py  checker.py
qqbot/plugins/moderator/wordlist/: ad.txt  offensive-zh.txt
qqbot/plugins/repeat/: __init__.py  config.py
qqbot/plugins/rp/: __init__.py  config.py
qqbot/plugins/utilities/: __init__.py  config.py
